--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,9 +1,12 @@
 
-<h1><%= @artist.name %></h1>
+<%@artists.each do |artist|%>
 
-<h3><%= pluralize(@artist.songs.count, 'songs') %></h3>
+<h1><%= artist.name %></h1>
+
+<h3><%= pluralize(artist.songs.count, 'songs') %></h3>
 <ul>
-  <% @artist.songs.each do |p| %>
+  <% artist.songs.each do |p| %>
     <li><%= link_to p.title, song_path(p) %></li>
   <% end %>
+    <% end %>
 </ul>
