--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,4 @@
 <%@artists.each do |artist|%>
 <%=artist.name%>
-<h3><%= pluralize(@rtist.songs.count, 'songs') %></h3>
+<h3><%= pluralize(artist.songs.count, 'songs') %></h3>
 <%end%>
