automatically backed up by learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,5 @@
 <%@songs.each do |song|%>
-<%= @song.artist - @song.title, if @song.artist%>
+<%if @song.artist%>
+<%= @song.artist - @song.title%>
+<%end%>
 <%end%>
