automatically backed up by learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <%@songs.each do |song|%>
 <%if song.artist%>
-<%= song.artist song.title%>
+<p><%= song.artist%>-<%=song.title%></p>
 <%end%>
 <%end%>
