--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <%@songs.each do |song|%>
 <%if song.artist%>
-<p><%= link_to song.artist_name, artist_path(song.artist)%><%=link_to song.title, song_path(song)%></p>
+<p><%= link_to song.artist_name, artist_path(song.artist) link_to song.title, song_path(song)%></p>
 <%end%>
 <%end%>
