--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,6 @@
 <%@songs.each do |song|%>
 <%if song.artist%>
-<p><%= link_to song.artist_name, artist_path(song.artist) song.title, song_path(song)%></p>
+<%binding.pry%>
+<p><%= link_to song.artist_name, artist_path(song.artist)%></p>
 <%end%>
 <%end%>
