--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,5 @@
-<%@songs.each do |song|%>
+
 <%if song.artist%>
-<p><%= link_to "#{song.artist_name}-#{song.title}", artist_path(song.artist)%></p>
+<p><%= link_to @song.artist_name, artist_path(@song.artist)%></p>
 <%end%>
 <%end%>
